// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates a graph from the petstore specification 1`] = `
Object {
  "edges": Any<Object>,
  "nodes": Any<Object>,
  "path": StringContaining "tests/resources/petstore",
}
`;

exports[`Creates a graph from the social-network specification 1`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Email": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "format": "email",
              "type": "string",
            },
            "isInline": false,
            "name": "Email",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Email": [Circular],
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "rawPath": "#/components/schemas/Email",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/Email",
          "tokenName": "Email",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Name": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "isInline": false,
            "name": "Name",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Name": [Circular],
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "rawPath": "#/components/schemas/Name",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/Name",
          "tokenName": "Name",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "email": Object {
                  "$ref": "#/components/schemas/Email",
                },
                "name": Object {
                  "$ref": "#/components/schemas/Name",
                },
                "username": Object {
                  "$ref": "#/components/schemas/Username",
                },
              },
              "required": Array [
                "username",
                "name",
                "email",
              ],
              "type": "object",
            },
            "isInline": false,
            "name": "User",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": [Circular],
              "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/User": RefEdgeImpl {
                "child": [Circular],
                "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
                "rawPath": "../social-network.yaml#/components/schemas/User",
                "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "specificationPath": "/components/schemas/User",
                "tokenName": "User",
              },
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "rawPath": "#/components/schemas/User",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/User",
          "tokenName": "User",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "isInline": false,
            "name": "Username",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": [Circular],
              "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/Username": RefEdgeImpl {
                "child": [Circular],
                "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
                "rawPath": "../social-network.yaml#/components/schemas/Username",
                "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "specificationPath": "/components/schemas/Username",
                "tokenName": "Username",
              },
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "rawPath": "#/components/schemas/Username",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/Username",
          "tokenName": "Username",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {
      "Email": SchemaNodeImpl {
        "content": Object {
          "format": "email",
          "type": "string",
        },
        "isInline": false,
        "name": "Email",
        "referencedBy": Object {
          "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Email": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "rawPath": "#/components/schemas/Email",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/Email",
            "tokenName": "Email",
          },
        },
      },
      "Name": SchemaNodeImpl {
        "content": Object {
          "type": "string",
        },
        "isInline": false,
        "name": "Name",
        "referencedBy": Object {
          "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Name": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "rawPath": "#/components/schemas/Name",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/Name",
            "tokenName": "Name",
          },
        },
      },
      "Post": SchemaNodeImpl {
        "content": Object {
          "properties": Object {
            "author": Object {
              "$ref": "#/components/schemas/User",
            },
            "content": Object {
              "type": "string",
            },
            "date": Object {
              "type": "string",
            },
          },
          "required": Array [
            "author",
            "date",
            "content",
          ],
          "type": "object",
        },
        "isInline": false,
        "name": "Post",
        "referencedBy": Object {
          "/home/max/openapi-graph-core/tests/resources/social-network/posts/posts.yaml#/components/schemas/Post": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/posts/posts.yaml",
            "rawPath": "../social-network.yaml#/components/schemas/Post",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/Post",
            "tokenName": "Post",
          },
        },
      },
      "User": SchemaNodeImpl {
        "content": Object {
          "properties": Object {
            "email": Object {
              "$ref": "#/components/schemas/Email",
            },
            "name": Object {
              "$ref": "#/components/schemas/Name",
            },
            "username": Object {
              "$ref": "#/components/schemas/Username",
            },
          },
          "required": Array [
            "username",
            "name",
            "email",
          ],
          "type": "object",
        },
        "isInline": false,
        "name": "User",
        "referencedBy": Object {
          "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "rawPath": "#/components/schemas/User",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/User",
            "tokenName": "User",
          },
          "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/User": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
            "rawPath": "../social-network.yaml#/components/schemas/User",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/User",
            "tokenName": "User",
          },
        },
      },
      "Username": SchemaNodeImpl {
        "content": Object {
          "type": "string",
        },
        "isInline": false,
        "name": "Username",
        "referencedBy": Object {
          "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "rawPath": "#/components/schemas/Username",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/Username",
            "tokenName": "Username",
          },
          "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/Username": RefEdgeImpl {
            "child": [Circular],
            "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
            "rawPath": "../social-network.yaml#/components/schemas/Username",
            "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
            "specificationPath": "/components/schemas/Username",
            "tokenName": "Username",
          },
        },
      },
    },
  },
  "path": StringContaining "tests/resources/social-network/social-network.yaml",
}
`;

exports[`Creates a graph from the social-network specification 2`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/User": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "email": Object {
                  "$ref": "#/components/schemas/Email",
                },
                "name": Object {
                  "$ref": "#/components/schemas/Name",
                },
                "username": Object {
                  "$ref": "#/components/schemas/Username",
                },
              },
              "required": Array [
                "username",
                "name",
                "email",
              ],
              "type": "object",
            },
            "isInline": false,
            "name": "User",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/User": RefEdgeImpl {
                "child": [Circular],
                "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "rawPath": "#/components/schemas/User",
                "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "specificationPath": "/components/schemas/User",
                "tokenName": "User",
              },
              "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/User": [Circular],
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
          "rawPath": "../social-network.yaml#/components/schemas/User",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/User",
          "tokenName": "User",
        },
        "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/Username": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "type": "string",
            },
            "isInline": false,
            "name": "Username",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml#/components/schemas/Username": RefEdgeImpl {
                "child": [Circular],
                "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "rawPath": "#/components/schemas/Username",
                "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
                "specificationPath": "/components/schemas/Username",
                "tokenName": "Username",
              },
              "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml#/components/schemas/Username": [Circular],
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/users/users.yaml",
          "rawPath": "../social-network.yaml#/components/schemas/Username",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/Username",
          "tokenName": "Username",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {
      "inline-schema-1": Object {
        "content": Object {
          "format": "array",
          "items": Object {
            "$ref": Any<String>,
          },
        },
        "isInline": true,
        "name": "inline-schema-1",
        "referencedBy": Object {},
      },
    },
  },
  "path": StringContaining "tests/resources/social-network/users/users.yaml",
}
`;

exports[`Creates a graph from the social-network specification 3`] = `
Object {
  "edges": Object {
    "ref": Object {
      "schemaRef": Object {
        "/home/max/openapi-graph-core/tests/resources/social-network/posts/posts.yaml#/components/schemas/Post": RefEdgeImpl {
          "child": SchemaNodeImpl {
            "content": Object {
              "properties": Object {
                "author": Object {
                  "$ref": "#/components/schemas/User",
                },
                "content": Object {
                  "type": "string",
                },
                "date": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "author",
                "date",
                "content",
              ],
              "type": "object",
            },
            "isInline": false,
            "name": "Post",
            "referencedBy": Object {
              "/home/max/openapi-graph-core/tests/resources/social-network/posts/posts.yaml#/components/schemas/Post": [Circular],
            },
          },
          "filePath": "/home/max/openapi-graph-core/tests/resources/social-network/posts/posts.yaml",
          "rawPath": "../social-network.yaml#/components/schemas/Post",
          "refToFilePath": "/home/max/openapi-graph-core/tests/resources/social-network/social-network.yaml",
          "specificationPath": "/components/schemas/Post",
          "tokenName": "Post",
        },
      },
    },
  },
  "nodes": Object {
    "schemas": Object {
      "inline-schema-1": Object {
        "content": Object {
          "format": "array",
          "items": Object {
            "$ref": Any<String>,
          },
        },
        "isInline": true,
        "name": "inline-schema-1",
        "referencedBy": Object {},
      },
    },
  },
  "path": StringContaining "tests/resources/social-network/posts/posts.yaml",
}
`;
